--- a/artnu/package.json
+++ b/artnu/package.json
@@ -22,10 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cy:open": "cypress open --e2e",
-    "em:start": "firebase emulators:start --import=./saved-data --export-on-exit",
-    "em:exec": "firebase emulators:exec --import=./saved-data 'npm start'",
-    "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm start'"
+    "cy:open": "cypress open --e2e"
   },
   "eslintConfig": {
     "extends": [
