--- a/artnu/firebase.json
+++ b/artnu/firebase.json
@@ -6,17 +6,17 @@
     "rules": "storage.rules"
   },
   "hosting": {
-    "public": "build",
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
       }
-    ],
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
     ]
   }
 }
