--- a/artnu/package.json
+++ b/artnu/package.json
@@ -47,5 +47,5 @@
     "gh-pages": "^5.0.0",
     "react-router-dom": "^6.10.0"
   },
-  "homepage": "https://lev-rosenberg.github.io/ArtNU"
+  "homepage": "."
 }
